--- a/app.json
+++ b/app.json
@@ -1,11 +1,11 @@
 {
-    "name": "Ajuser",
-    "description": "Ajuser is the Modified Version of WhatsAsena, Made By @aju with Baileys.",
+    "name": "BlackSir",
+    "description": "Ajuser is the Modified Version of WhatsAsena, Made By @Monsterlallu with Baileys.",
     "logo": "https://i.ibb.co/Y2mXdR5/ajuser.jpg",
     "keywords": ["whatsapp", "userbot", "julie", "WhatsAsena", "mwol", "bot", "ai"],
-    "repository": "https://github.com/aju001/Ajuser",
-    "website":   "https://github.com/aju001/Ajuser",
-    "success_url": "https://github.com/aju001/Ajuser",
+    "repository": "https://github.com/Monsterlallu/BlackSir",
+    "website":   "https://github.com/Monsterlallu/BlackSir.git",
+    "success_url": "https://github.com/Monsterlallu/BlackSir.git",
     "stack": "container",
     "env": {
         "AJU_SESSION": {
