--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
     "success_url": "https://github.com/Monsterlallu/BlackSir.git",
     "stack": "container",
     "env": {
-        "AJU_SESSION": {
+        "BLACKSIR_SESSION": {
             "description": "Type here yours Asena Session.",
             "required": true
         },
