--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
     "name": "BlackSir",
     "description": "Ajuser is the Modified Version of WhatsAsena, Made By @Monsterlallu with Baileys.",
-    "logo": "https://i.ibb.co/Y2mXdR5/ajuser.jpg",
+    "logo": "https://www.linkpicture.com/q/PicsArt_12-13-12.20.42.jpg",
     "keywords": ["whatsapp", "userbot", "julie", "WhatsAsena", "mwol", "bot", "ai"],
     "repository": "https://github.com/Monsterlallu/BlackSir",
     "website":   "https://github.com/Monsterlallu/BlackSir.git",
