--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
     "name": "BlackSir",
-    "description": "Ajuser is the Modified Version of WhatsAsena, Made By @Monsterlallu with Baileys.",
+    "description": "BlackSir is the Modified Version of WhatsAsena, Made By @Monsterlallu with Baileys.",
     "logo": "https://www.linkpicture.com/q/PicsArt_12-13-12.20.42.jpg",
     "keywords": ["whatsapp", "userbot", "julie", "WhatsAsena", "mwol", "bot", "ai"],
     "repository": "https://github.com/Monsterlallu/BlackSir",
